--- a/src/app/demo/components/dashboard/dashboard.component.html
+++ b/src/app/demo/components/dashboard/dashboard.component.html
@@ -1,191 +1,232 @@
-<p-button class="mb-5" label="See Graph" icon="pi pi-eye" (click)="showGraph()"></p-button>
-<div *ngIf="openGraph" class="card">
+<div  class="card" style="text-align: center;">
     <h5>Master Graph</h5>
-    <p-chart type="bar" width="89rem" [data]="basicData" [options]="basicOptions"></p-chart>
+    <p-chart type="pie" width="35rem" [data]="basicData" [options]="basicOptions"></p-chart>
 </div>
 <div class="grid mt-3">
     <div class="col">
         <p-card header="DDO" [style]="{width: '360px'}" styleClass="p-card-shadow">
+            <ng-template pTemplate="header">
+                <p-chart type="bar" width="24rem" width="24rem" [data]="ddoData" [options]="basicOptions"></p-chart>
+            </ng-template>
+
             <p style="font-size: large;">Total DDO
                 <span style="margin-left: 28%;">:</span>
                 <span id="totalDDO" style="margin-left: 7%;">{{totalActiveDdo + totalInActiveDdo}}</span>
-            </p>        
+            </p>
             <p style="font-size: large;">Total Active DDO
                 <span style="margin-left: 12%;">:</span>
-                <span id="totalActiveDDO" style="margin-left: 7%;">{{totalActiveDdo}}</span>    
+                <span id="totalActiveDDO" style="margin-left: 7%;">{{totalActiveDdo}}</span>
             </p>
-            <p style="font-size: large;">Total Inactive DDO 
-                <span style="margin-left: 8%;">:</span> 
+            <p style="font-size: large;">Total Inactive DDO
+                <span style="margin-left: 8%;">:</span>
                 <span id="totalInactiveDDO" style="margin-left: 7%;">{{totalInActiveDdo}}</span>
             </p>
-           
+
             <ng-template pTemplate="footer">
-                <p-button label="View Details" [style]="{'width': '23.3rem'}" icon="pi pi-eye" routerLink="/masterDDO"></p-button>
+                <p-button label="View Details" [style]="{'width': '23.3rem'}" icon="pi pi-eye"
+                    routerLink="/masterDDO"></p-button>
             </ng-template>
         </p-card>
     </div>
-    
+
     <div class="col">
         <p-card header="DETAIL HEEAD" [style]="{width: '360px'}" styleClass="p-card-shadow">
-            <p style="font-size: large;">Total DETAIL HEEAD 
+            <ng-template pTemplate="header">
+                <p-chart type="bar" width="24rem" [data]="detailHeadData" [options]="basicOptions"></p-chart>
+            </ng-template>
+            <p style="font-size: large;">Total DETAIL HEEAD
                 <span style="margin-left: 22%;">:</span>
-                <span id="totalDetailHead" style="margin-left: 7%;">{{totalActiveDetailHead + totalInActiveDetailHead}}</span>
+                <span id="totalDetailHead" style="margin-left: 7%;">{{totalActiveDetailHead +
+                    totalInActiveDetailHead}}</span>
             </p>
-            <p style="font-size: large;">Total Active DETAIL HEEAD 
+            <p style="font-size: large;">Total Active DETAIL HEEAD
                 <span style="margin-left: 6%;">:</span>
                 <span id="totalActiveDetailHead" style="margin-left: 7%;">{{totalActiveDetailHead}}</span>
             </p>
-            <p style="font-size: large;">Total Inactive DETAIL HEEAD 
+            <p style="font-size: large;">Total Inactive DETAIL HEEAD
                 <span style="margin-left: 3%;">:</span>
                 <span id="totalInactiveDetailHead" style="margin-left: 7%;">{{totalInActiveDetailHead}}</span>
             </p>
             <ng-template pTemplate="footer">
-                <p-button label="View Details" [style]="{'width': '23.3rem'}" icon="pi pi-eye" routerLink="/detailHead"></p-button>
+                <p-button label="View Details" [style]="{'width': '23.3rem'}" icon="pi pi-eye"
+                    routerLink="/detailHead"></p-button>
 
             </ng-template>
         </p-card>
     </div>
     <div class="col">
         <p-card header="SUB DEATIL HEAD" [style]="{width: '360px'}" styleClass="p-card-shadow">
-            <p style="font-size: large;">Total SUBDEATILHEAD 
+            <ng-template pTemplate="header">
+                <p-chart type="bar" width="24rem" [data]="subDetailHeadData" [options]="basicOptions"></p-chart>
+            </ng-template>
+            <p style="font-size: large;">Total SUBDEATILHEAD
                 <span style="margin-left: 20%;">:</span>
-                <span id="totalSubDetailHead" style="margin-left: 5%;">{{totalActiveSubDetailHead + totalInActiveSubDetailHead}}</span>
+                <span id="totalSubDetailHead" style="margin-left: 5%;">{{totalActiveSubDetailHead +
+                    totalInActiveSubDetailHead}}</span>
             </p>
-            <p style="font-size: large;">Total Active SUBDEATILHEAD 
+            <p style="font-size: large;">Total Active SUBDEATILHEAD
                 <span style="margin-left: 4%;">:</span>
                 <span id="totalActiveSubDetailHead" style="margin-left: 5%;">{{totalActiveSubDetailHead}}</span>
             </p>
-            <p style="font-size: large;">Total Inactive SUBDEATILHEAD 
-                <span style="margin-left: 1%;">:</span>   
+            <p style="font-size: large;">Total Inactive SUBDEATILHEAD
+                <span style="margin-left: 1%;">:</span>
                 <span id="totalInactiveSubDetailHead" style="margin-left: 5%;">{{totalInActiveSubDetailHead}}</span>
             </p>
             <ng-template pTemplate="footer">
-                <p-button label="View Details" [style]="{'width': '23.3rem'}" icon="pi pi-eye" routerLink="/subDetailHead"></p-button>
-                
+                <p-button label="View Details" [style]="{'width': '23.3rem'}" icon="pi pi-eye"
+                    routerLink="/subDetailHead"></p-button>
+
             </ng-template>
         </p-card>
     </div>
     <div class="col">
         <p-card header="DEPARTMENT" [style]="{width: '360px'}" styleClass="p-card-shadow">
-            <p style="font-size: large;">Total DEPARTMENT 
+            <ng-template pTemplate="header">
+                <p-chart type="bar" width="24rem" [data]="departmentData" [options]="basicOptions"></p-chart>
+            </ng-template>
+            <p style="font-size: large;">Total DEPARTMENT
                 <span style="margin-left: 27%;">:</span>
-                <span id="totalDepartment" style="margin-left: 5%;">{{totalActiveDepartment + totalInActiveDepartment}}</span>
+                <span id="totalDepartment" style="margin-left: 5%;">{{totalActiveDepartment +
+                    totalInActiveDepartment}}</span>
             </p>
-            <p style="font-size: large;">Total Active DEPARTMENT 
+            <p style="font-size: large;">Total Active DEPARTMENT
                 <span style="margin-left: 11%;">:</span>
                 <span id="totalActiveDepartment" style="margin-left: 5%;">{{totalActiveDepartment}}</span>
             </p>
-            <p style="font-size: large;">Total Inactive DEPARTMENT 
+            <p style="font-size: large;">Total Inactive DEPARTMENT
                 <span style="margin-left: 7%;">:</span>
                 <span id="totalInactiveDepartment" style="margin-left: 5%;">{{totalInActiveDepartment}}</span>
             </p>
             <ng-template pTemplate="footer">
-                <p-button label="View Details" [style]="{'width': '23.3rem'}" icon="pi pi-eye" routerLink="/department"></p-button>
-                
+                <p-button label="View Details" [style]="{'width': '23.3rem'}" icon="pi pi-eye"
+                    routerLink="/department"></p-button>
+
             </ng-template>
         </p-card>
     </div>
     <div class="col">
         <p-card header="MAJOR HEAD" [style]="{width: '360px'}" styleClass="p-card-shadow">
-            <p style="font-size: large;">Total MAJOR HEAD 
+            <ng-template pTemplate="header">
+                <p-chart type="bar" width="24rem" [data]="majorHeadData" [options]="basicOptions"></p-chart>
+            </ng-template>
+            <p style="font-size: large;">Total MAJOR HEAD
                 <span style="margin-left: 22%;">:</span>
-                <span id="totalMajorHead" style="margin-left: 7%;">{{totalActiveMajorHead + totalInActiveMajorHead}}</span>
+                <span id="totalMajorHead" style="margin-left: 7%;">{{totalActiveMajorHead +
+                    totalInActiveMajorHead}}</span>
             </p>
-            <p style="font-size: large;">Total Active MAJOR HEAD 
+            <p style="font-size: large;">Total Active MAJOR HEAD
                 <span style="margin-left: 6%;">:</span>
                 <span id="totalActiveMajorHead" style="margin-left: 7%;">{{totalActiveMajorHead}}</span>
             </p>
-            <p style="font-size: large;">Total Inactive MAJOR HEAD 
+            <p style="font-size: large;">Total Inactive MAJOR HEAD
                 <span style="margin-left: 2%;">:</span>
                 <span id="totalInactiveMajorHead" style="margin-left: 7%;">{{totalInActiveMajorHead}}</span>
             </p>
             <ng-template pTemplate="footer">
-                <p-button label="View Details" [style]="{'width': '23.3rem'}" icon="pi pi-eye" routerLink="/majorHead"></p-button>
-                
+                <p-button label="View Details" [style]="{'width': '23.3rem'}" icon="pi pi-eye"
+                    routerLink="/majorHead"></p-button>
+
             </ng-template>
         </p-card>
     </div>
     <div class="col">
         <p-card header="SCHEME HEAD" [style]="{width: '360px'}" styleClass="p-card-shadow">
-            <p style="font-size: large;">Total SCHEME HEAD 
+            <ng-template pTemplate="header">
+                <p-chart type="bar" width="24rem" [data]="schemeHeadData" [options]="basicOptions"></p-chart>
+            </ng-template>
+            <p style="font-size: large;">Total SCHEME HEAD
                 <span style="margin-left: 25%;">:</span>
-                <span id="totalSchemeHead" style="margin-left: 5%;">{{totalActiveSchemeHead + totalInActiveSchemeHead}}</span>
+                <span id="totalSchemeHead" style="margin-left: 5%;">{{totalActiveSchemeHead +
+                    totalInActiveSchemeHead}}</span>
             </p>
-            <p style="font-size: large;">Total Active SCHEME HEAD 
+            <p style="font-size: large;">Total Active SCHEME HEAD
                 <span style="margin-left: 9%;">:</span>
                 <span id="totalActiveSchemeHead" style="margin-left: 5%;">{{totalActiveSchemeHead}}</span>
             </p>
-            <p style="font-size: large;">Total Inactive SCHEME HEAD 
+            <p style="font-size: large;">Total Inactive SCHEME HEAD
                 <span style="margin-left: 5.55%;">:</span>
                 <span id="totalInactiveSchemeHead" style="margin-left: 5%;">{{totalInActiveSchemeHead}}</span>
             </p>
             <ng-template pTemplate="footer">
-                <p-button label="View Details" [style]="{'width': '23.3rem'}" icon="pi pi-eye" routerLink="/schemeHead"></p-button>
-                
+                <p-button label="View Details" [style]="{'width': '23.3rem'}" icon="pi pi-eye"
+                    routerLink="/schemeHead"></p-button>
+
             </ng-template>
         </p-card>
     </div>
     <div class="col">
         <p-card header="Treasury" [style]="{width: '360px'}" styleClass="p-card-shadow">
-            <p style="font-size: large;">Total TREASURY 
+            <ng-template pTemplate="header">
+                <p-chart type="bar" width="24rem" [data]="treasuryData" [options]="basicOptions"></p-chart>
+            </ng-template>
+            <p style="font-size: large;">Total TREASURY
                 <span style="margin-left: 27%;">:</span>
-                <span id="totalDepartment" style="margin-left: 5%;">0</span>
+                <span id="totalDepartment" style="margin-left: 5%;">{{totalActiveTreasury +
+                    totalInActiveTreasury}}</span>
             </p>
-            <p style="font-size: large;">Total Active TREASURY 
+            <p style="font-size: large;">Total Active TREASURY
                 <span style="margin-left: 11%;">:</span>
-                <span id="totalActiveDepartment" style="margin-left: 5%;">0</span>
+                <span id="totalActiveDepartment" style="margin-left: 5%;">{{totalActiveTreasury}}</span>
             </p>
-            <p style="font-size: large;">Total Inactive TREASURY 
+            <p style="font-size: large;">Total Inactive TREASURY
                 <span style="margin-left: 7%;">:</span>
-                <span id="totalInactiveDepartment" style="margin-left: 5%;">0</span>
+                <span id="totalInactiveDepartment" style="margin-left: 5%;">{{totalInActiveTreasury}}</span>
             </p>
             <ng-template pTemplate="footer">
-                <p-button label="View Details" [style]="{'width': '23.3rem'}" icon="pi pi-eye" routerLink="/treasury"></p-button>
-                
+                <p-button label="View Details" [style]="{'width': '23.3rem'}" icon="pi pi-eye"
+                    routerLink="/treasury"></p-button>
+
             </ng-template>
         </p-card>
     </div>
     <div class="col">
         <p-card header="MINOR HEAD" [style]="{width: '360px'}" styleClass="p-card-shadow">
-            <p style="font-size: large;">Total MINOR HEAD 
+            <ng-template pTemplate="header">
+                <p-chart type="bar" width="24rem" [data]="minorHeadData" [options]="basicOptions"></p-chart>
+            </ng-template>
+            <p style="font-size: large;">Total MINOR HEAD
                 <span style="margin-left: 26%;">:</span>
                 <span id="totalMinorHead" style="margin-left: 5%;">0</span>
             </p>
-            <p style="font-size: large;">Total Active MINOR HEAD 
+            <p style="font-size: large;">Total Active MINOR HEAD
                 <span style="margin-left: 10%;">:</span>
                 <span id="totalActiveMinorHead" style="margin-left: 5%;">0</span>
             </p>
-            <p style="font-size: large;">Total Inactive MINOR HEAD 
+            <p style="font-size: large;">Total Inactive MINOR HEAD
                 <span style="margin-left: 6%;">:</span>
                 <span id="totalInactiveMinorHead" style="margin-left: 5%;">0</span>
             </p>
             <ng-template pTemplate="footer">
-                <p-button label="View Details" [style]="{'width': '23.3rem'}" icon="pi pi-eye" routerLink="/minorhead"></p-button>
-                
+                <p-button label="View Details" [style]="{'width': '23.3rem'}" icon="pi pi-eye"
+                    routerLink="/minorhead"></p-button>
+
             </ng-template>
         </p-card>
     </div>
 
     <div class="col">
         <p-card header="SUB MAJOR HEAD" [style]="{width: '360px'}" styleClass="p-card-shadow">
-            <p style="font-size: large;">Total SUBMAJORHEAD 
+            <ng-template pTemplate="header">
+                <p-chart type="bar" width="24rem" [data]="subMajorHeadData" [options]="basicOptions"></p-chart>
+            </ng-template>
+            <p style="font-size: large;">Total SUBMAJORHEAD
                 <span style="margin-left: 18%;">:</span>
                 <span id="totalSubMajorHead" style="margin-left: 2%;">0</span>
             </p>
-            <p style="font-size: large;">Total Active SUBMAJORHEAD 
+            <p style="font-size: large;">Total Active SUBMAJORHEAD
                 <span style="margin-left: 2%;">:</span>
                 <span id="totalActiveSubMajorHead" style="margin-left: 2%;">0</span>
             </p>
-            <p style="font-size: large;">Total Inactive SUBMAJORHEAD 
-                <span >:</span>
+            <p style="font-size: large;">Total Inactive SUBMAJORHEAD
+                <span>:</span>
                 <span id="totalInactiveSubMajorHead" style="margin-left: 2%;">0</span>
             </p>
             <ng-template pTemplate="footer">
-                <p-button label="View Details" [style]="{'width': '23.3rem'}" icon="pi pi-eye" routerLink="/submajorhead"></p-button>
-                
+                <p-button label="View Details" [style]="{'width': '23.3rem'}" icon="pi pi-eye"
+                    routerLink="/submajorhead"></p-button>
+
             </ng-template>
         </p-card>
     </div>
 
 </div>
-  
