--- a/src/app/demo/components/dashboardskeleton/dashboardskeleton.component.html
+++ b/src/app/demo/components/dashboardskeleton/dashboardskeleton.component.html
@@ -1,1 +1,57 @@
-<p>dashboardskeleton works!</p>
+<div class="grid mt-4">
+        <div *ngFor="let item of items" class="col">
+            <div class="card" [style]="{width: '360px'}">
+                <div class="grid">
+                    <div class="col ml-8">
+                        <p-skeleton height="1rem" width="5rem" styleClass="mb-2"></p-skeleton>
+                    </div>
+                    <div class="col mr-7">
+                        <p-skeleton height="1rem" width="5rem" styleClass="mb-2"></p-skeleton>
+                    </div>
+                </div>
+                <p-skeleton height="8rem" width="21.5rem" styleClass="mb-2"></p-skeleton>
+                <div class="flex justify-content-center">
+                    <p-skeleton height=".7rem" width="5rem" styleClass="mb-2"></p-skeleton>
+                </div>
+                <div class="mt-5">
+                    <p-skeleton height="2.3rem" width="10rem" styleClass="mb-2"></p-skeleton>
+                </div>
+                <div class="grid mt-4">
+                    <div class="col">
+                        <p-skeleton height="1.5rem" width="9rem" styleClass="mb-2"></p-skeleton>
+                    </div>
+                    <div class="col ml-5">
+                        <p-skeleton height="1.5rem" width="1rem" styleClass="mb-2"></p-skeleton>
+                    </div>
+                    <div class="col">
+                        <p-skeleton height="1.5rem" width="5rem" styleClass="mb-2"></p-skeleton>
+                    </div>
+                </div> 
+                <div class="grid">
+                    <div class="col">
+                        <p-skeleton height="1.5rem" width="9rem" styleClass="mb-2"></p-skeleton>
+                    </div>
+                    <div class="col ml-5">
+                        <p-skeleton height="1.5rem" width="1rem" styleClass="mb-2"></p-skeleton>
+                    </div>
+                    <div class="col">
+                        <p-skeleton height="1.5rem" width="5rem" styleClass="mb-2"></p-skeleton>
+                    </div>
+                </div> 
+                <div class="grid">
+                    <div class="col">
+                        <p-skeleton height="1.5rem" width="9rem" styleClass="mb-2"></p-skeleton>
+                    </div>
+                    <div class="col ml-5">
+                        <p-skeleton height="1.5rem" width="1rem" styleClass="mb-2"></p-skeleton>
+                    </div>
+                    <div class="col">
+                        <p-skeleton height="1.5rem" width="5rem" styleClass="mb-2"></p-skeleton>
+                    </div>
+                </div> 
+                <div class="mt-3">
+                    <p-skeleton height="3rem" width="21.5rem" styleClass="mb-2"></p-skeleton>
+                </div>
+            </div>
+        </div>
+</div>
