--- a/src/app/demo/components/masterddo/masterddo.component.html
+++ b/src/app/demo/components/masterddo/masterddo.component.html
@@ -2,16 +2,17 @@
   style="border: 1px solid;background-image: linear-gradient(to left, #243949 0%, #517fa4 100%);
   box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset; height: fit-content; display: flex; justify-content: space-between; align-items: center; padding: 1rem;">
   <h2 style="color: white;font-family: sans-serif;">DDO Table</h2>
-  <p-button class="" (click)="showDeletedData()" label="SEE DELETED DDO">
+  <!-- <p-button class="" (click)="showDeletedData()" label="SEE DELETED DDO">
     <i class="pi pi-eye mr-2"></i>
   </p-button>
   <p-button class="" (click)="showNormalData()" label="SEE DDO">
     <i class="pi pi-eye mr-2"></i>
-  </p-button>
+  </p-button> -->
   <p-button class="mb-10" (click)="show()" label="ADD DDO">
     <i class="pi pi-plus mr-2"></i>
   </p-button>
 </div>
+
 <!-- <div class="addstubutt"><p-button (click)="showDialog()" label="ADD DDO"></p-button>
 </div> -->
 <!-- <div class="flex flex-wrap align-items-center justify-content-end mb-5">
@@ -112,6 +113,7 @@
           </div>
         </div>
       </ng-template>
+      
 
     </p-dialog>
   </form>
@@ -119,6 +121,13 @@
 </div> -->
 <p-toast></p-toast>
 <p-confirmDialog></p-confirmDialog>
+  <p-tabView (onChange)="handleChange($event)">
+      <p-tabPanel header="Active DDO" [tooltip]="totalActiveDdo">
+      </p-tabPanel>
+      <p-tabPanel header="Inactive DDO" [tooltip]="totalInactiveDdo">
+      </p-tabPanel>
+  </p-tabView>
+  
 <mh-prime-dynamic-table size="small" [numberRowsShown]="10"
   [rowsPerPageOptions]="[10, 30, 50]"  [data]="tableData" rowSelectionMode="multiple" [actionButtons]="actionButtonConfig" (rowSelect)="handleRowSelection($event)"
   (actionButtonClicked)="handleButtonClick($event)" (queryParameterChange)="handQueryParameterChange($event)"
