--- a/src/app/demo/components/majorhead/majorhead.component.html
+++ b/src/app/demo/components/majorhead/majorhead.component.html
@@ -3,13 +3,27 @@
     <p-breadcrumb [model]="items" [home]="home"></p-breadcrumb>
   </div>
   <div class="flex justify-content-end col">
-    <p-button class="mb-10" (click)="show()" label="ADD TREASURY">
+    <p-button class="mb-10" (click)="show()" label="ADD Major Head">
       <i class="pi pi-plus mr-2"></i>
     </p-button>
   </div>
 </div>
 <p-toast></p-toast>
 <p-confirmDialog></p-confirmDialog>
+<div class="mb-2">
+  <p-tabView (onChange)="handleChange($event)">
+      <p-tabPanel header="Active">
+        <p>
+          There are {{totalActiveMajorHead}} DDO's are active out of {{totalActiveMajorHead + totalInactiveMajorHead}} DDO's given below.
+        </p>
+      </p-tabPanel>
+      <p-tabPanel header="Inactive">
+        <p>
+          There are {{totalInactiveMajorHead}} DDO's are inactive out of {{totalActiveMajorHead + totalInactiveMajorHead}} DDO's given below.
+        </p>
+      </p-tabPanel>
+  </p-tabView>
+</div>
 <mh-prime-dynamic-table size="small" [numberRowsShown]="10"
   [rowsPerPageOptions]="[10, 30, 50]"  [data]="tableData" rowSelectionMode="multiple" [actionButtons]="actionButtonConfig" (rowSelect)="handleRowSelection($event)"
   (actionButtonClicked)="handleButtonClick($event)" (queryParameterChange)="handQueryParameterChange($event)"
