--- a/src/app/demo/components/schemehead/schemehead.component.html
+++ b/src/app/demo/components/schemehead/schemehead.component.html
@@ -9,95 +9,104 @@
   </div>
 </div>
 <div class="flex flex-wrap align-items-center justify-content-end mb-5">
-    <form [formGroup]="userForm" >
-    <p-dialog class="custom-dialog" [header]="headertext" [closable]="true" [modal]="true"
-        [(visible)]="visible" [style]="{ width: '50rem' }" (onHide)="hide(userForm)">
-  
-        <div class="mb-4 mt-3">
-          <label class="text-2xl" for="firstname2">Select MinorHeadID<span class="red"> *</span> : </label>
-          <p-dropdown class="ml-3" [virtualScroll]="true" [virtualScrollItemSize]="30" [style]="{'width':'65%'}" [options]="codes" formControlName="minorHeadId"
-            placeholder="Select MinorHead ID"  optionLabel="name" optionValue="id">
-            <ng-template let-option pTemplate="item">
-          {{ option.code }} : {{ option.name }}
-            </ng-template>
-          </p-dropdown>
-          <div *ngIf="userForm.get('minorHeadId')?.invalid && userForm.get('minorHeadId')?.touched" class="error">
-            MinorHeadID is required.
+  <form [formGroup]="userForm">
+    <p-dialog class="custom-dialog" [header]="headertext" [closable]="true" [modal]="true" [(visible)]="visible"
+      [style]="{ width: '50rem' }" (onHide)="hide(userForm)">
+
+      <div class="mb-4 mt-3">
+        <label class="text-2xl" for="firstname2">Select MinorHeadID<span class="red"> *</span> : </label>
+        <p-dropdown class="ml-3" [virtualScroll]="true" [virtualScrollItemSize]="30" [style]="{'width':'65%'}"
+          [options]="codes" formControlName="minorHeadId" placeholder="Select MinorHead ID" optionLabel="name"
+          optionValue="id">
+          <ng-template let-option pTemplate="item">
+            {{ option.code }} : {{ option.name }}
+          </ng-template>
+        </p-dropdown>
+        <div *ngIf="userForm.get('minorHeadId')?.invalid && userForm.get('minorHeadId')?.touched" class="error">
+          MinorHeadID is required.
+        </div>
+      </div>
+      <div class="formgrid grid">
+        <div class="field col">
+          <label class="text-2xl" for="firstname2">Demand Code*</label>
+          <input id="firstname2" type="text"
+            class="text-base text-color surface-overlay p-3 hover:shadow-1 border-2 border-solid surface-border border-round appearance-none outline-none focus:border-primary w-full"
+            formControlName="demandCode">
+          <div *ngIf="userForm.get('demandCode')?.invalid && userForm.get('demandCode')?.touched" class="error">
+            Demand Code is required length 2<div class=""></div>
           </div>
         </div>
-          <div class="formgrid grid">
-            <div class="field col">
-                <label class="text-2xl" for="firstname2">Demand Code*</label>
-                <input id="firstname2" type="text" class="text-base text-color surface-overlay p-3 hover:shadow-1 border-2 border-solid surface-border border-round appearance-none outline-none focus:border-primary w-full" formControlName="demandCode">
-                <div *ngIf="userForm.get('demandCode')?.invalid && userForm.get('demandCode')?.touched" class="error">
-                  Demand Code is required length 2<div class=""></div>
-                </div>
-            </div>
-            <div class="field col">
-                <label class="text-2xl" for="firstname2">SchemeHead Code*</label>
-                <input id="firstname2" type="text" class="text-base text-color surface-overlay p-3 hover:shadow-1 border-2 border-solid surface-border border-round appearance-none outline-none focus:border-primary w-full" formControlName="code">
-                <div *ngIf="userForm.get('code')?.invalid && userForm.get('code')?.touched" class="error">
-                  Code is required length 3 .
-                </div>
-              </div>
+        <div class="field col">
+          <label class="text-2xl" for="firstname2">SchemeHead Code*</label>
+          <input id="firstname2" type="text"
+            class="text-base text-color surface-overlay p-3 hover:shadow-1 border-2 border-solid surface-border border-round appearance-none outline-none focus:border-primary w-full"
+            formControlName="code">
+          <div *ngIf="userForm.get('code')?.invalid && userForm.get('code')?.touched" class="error">
+            Code is required length 3 .
           </div>
-          <div class="formgrid grid">
+        </div>
+      </div>
+      <div class="formgrid grid">
+        <div class="field col">
+          <label class="text-2xl" for="firstname2">SchemeHead Name*</label>
+          <input id="firstname2" type="text"
+            class="text-base text-color surface-overlay p-3 hover:shadow-1 border-2 border-solid surface-border border-round appearance-none outline-none focus:border-primary w-full"
+            formControlName="name">
+          <div *ngIf="userForm.get('name')?.invalid && userForm.get('name')?.touched" class="error">
+            SchemeHead Name is required.
+          </div>
+        </div>
+      </div>
+      <div class="button-container" *ngIf="isSubUp; else elseBlock">
+        <div class="formgrid grid">
+          <div class="col-9">
+            <p-button class="flex flex-wrap align-items-center justify-content-end mt-4" label="Cancel"
+              styleClass="p-button-warning" icon="pi pi-times" iconPos="left" (click)="cancel(userForm)"></p-button>
+          </div>
           <div class="field col">
-            <label class="text-2xl" for="firstname2">SchemeHead Name*</label>
-            <input id="firstname2" type="text" class="text-base text-color surface-overlay p-3 hover:shadow-1 border-2 border-solid surface-border border-round appearance-none outline-none focus:border-primary w-full" formControlName="name">
-            <div *ngIf="userForm.get('name')?.invalid && userForm.get('name')?.touched" class="error">
-              SchemeHead Name is required.
-            </div>
+            <p-button class="flex flex-wrap align-items-center justify-content-end mr-5 mt-4" label="Submit"
+              icon="pi pi-check" styleClass="p-button-success" iconPos="left" (click)="submit(userForm)"
+              [disabled]="userForm.invalid"></p-button>
           </div>
+        </div>
+      </div>
+      <ng-template #elseBlock>
+        <div class="formgrid grid">
+          <div class="col-9">
+            <p-button class="flex flex-wrap align-items-center justify-content-end mt-4" label="Cancel"
+              icon="pi pi-times" styleClass="p-button-warning" iconPos="left" (click)="cancel(userForm)"></p-button>
           </div>
-          <div class="button-container" *ngIf="isSubUp; else elseBlock">
-            <div class="formgrid grid">
-              <div class="col-9">
-                <p-button class="flex flex-wrap align-items-center justify-content-end mt-4" label="Cancel" styleClass="p-button-warning" icon="pi pi-times" iconPos="left" (click)="cancel(userForm)" ></p-button>
-              </div>
-              <div class="field col">
-                <p-button class="flex flex-wrap align-items-center justify-content-end mr-5 mt-4" label="Submit" icon="pi pi-check" styleClass="p-button-success" iconPos="left" (click)="submit(userForm)" [disabled]="userForm.invalid" ></p-button>
-              </div>
-            </div>
+          <div class="field col">
+            <p-button class="flex flex-wrap align-items-center justify-content-end mr-5 mt-4" label="Update"
+              icon="pi pi-check" styleClass="p-button-success" iconPos="left" (click)="update(userForm)"
+              [disabled]="userForm.invalid"></p-button>
           </div>
-          <ng-template #elseBlock>
-            <div class="formgrid grid">
-              <div class="col-9">
-                <p-button class="flex flex-wrap align-items-center justify-content-end mt-4" label="Cancel" icon="pi pi-times" styleClass="p-button-warning" iconPos="left" (click)="cancel(userForm)" ></p-button>
-              </div>
-              <div class="field col">
-                <p-button class="flex flex-wrap align-items-center justify-content-end mr-5 mt-4" label="Update" icon="pi pi-check" styleClass="p-button-success" iconPos="left" (click)="update(userForm)" [disabled]="userForm.invalid" ></p-button>
-              </div>
-            </div>
-          </ng-template>
-      
+        </div>
+      </ng-template>
+
     </p-dialog>
   </form>
   <p-toast></p-toast>
-  </div>
-  <p-confirmDialog></p-confirmDialog>
+</div>
+<p-confirmDialog></p-confirmDialog>
+<div class="mb-2">
   <p-tabView (onChange)="handleChange($event)">
-   
-    <p-tabPanel header="Active  " >
+    <p-tabPanel header="Active  ">
       <p>
-        There are {{totalActiveSchemeHead}} SchemeHead's are active out of {{totalActiveSchemeHead + totalInactiveSchemeHead}} SchemeHead's given below.
+        There are {{totalActiveSchemeHead}} SchemeHead's are active out of {{totalActiveSchemeHead +
+        totalInactiveSchemeHead}} SchemeHead's given below.
       </p>
     </p-tabPanel>
-    <p-tabPanel header="Inactive " >
+    <p-tabPanel header="Inactive ">
       <p>
-        There are {{totalInactiveSchemeHead}} SchemeHead's are inactive out of {{totalActiveSchemeHead + totalInactiveSchemeHead}} SchemeHead's given below.
+        There are {{totalInactiveSchemeHead}} SchemeHead's are inactive out of {{totalActiveSchemeHead +
+        totalInactiveSchemeHead}} SchemeHead's given below.
       </p>
     </p-tabPanel>
-</p-tabView>
-  <mh-prime-dynamic-table 
-    size="small"
-    [numberRowsShown]="10"
-    [rowsPerPageOptions]="[10, 30, 50]"
-    [data]="tableData"
-    rowSelectionMode="multiple"
-    [actionButtons]="actionButtonConfig"
-    (rowSelect)="handleRowSelection($event)"
-    (actionButtonClicked)="handleButtonClick($event)"
-    (queryParameterChange)="handQueryParameterChange($event)" [isLoading]="istableLoading" [showTopMenubar]="true" [showGlobalSearch]="false"
-  >
-  </mh-prime-dynamic-table>
+  </p-tabView>
+</div>
+<mh-prime-dynamic-table size="small" [numberRowsShown]="10" [rowsPerPageOptions]="[10, 30, 50]" [data]="tableData"
+  rowSelectionMode="multiple" [actionButtons]="actionButtonConfig" (rowSelect)="handleRowSelection($event)"
+  (actionButtonClicked)="handleButtonClick($event)" (queryParameterChange)="handQueryParameterChange($event)"
+  [isLoading]="istableLoading" [showTopMenubar]="true" [showGlobalSearch]="false">
+</mh-prime-dynamic-table>
